[package]
name = "zenth_requests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arti-client = { version = "0.36.0", default-features = false, features = ["tokio", "rustls", "compression"] }
async-trait = "0.1.89"
bytes = "1.10.1"
dirs = "5.0"
emissary-core = "0.2.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
rustls = "0.23.35"
rustls-native-certs = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.28.0"
tor-rtcompat = { version = "0.36.0", default-features = false, features = ["tokio", "rustls"] }
url = "2.5.7"

# Lokinet/Session crypto - utilise zenth_crypto pour toutes les primitives
zenth_crypto = { path = "../zenth_crate_crypto" }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
